fix flicker bug in overflow

--- a/app/styles/components/layered_navigation/_layered_navigation.scss
+++ b/app/styles/components/layered_navigation/_layered_navigation.scss
@@ -53,7 +53,6 @@
 
     .layered-navigation-content {
       height: 100vh;
-      overflow: hidden;
     }
 
     @include desktop {
